fix: only have options button when sidebar present or header not collapsed

--- a/client/src/components/layout/PageHeader.module.scss
+++ b/client/src/components/layout/PageHeader.module.scss
@@ -25,7 +25,8 @@
 }
 
 .OptionsButton {
-  padding: 0.2rem 0.3rem;
+  padding: 0.2rem 0.3rem 0 0.3rem;
+  margin-top: 0.1rem;
   cursor: pointer;
   margin-right: 0.2rem;
   &:hover {
